--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 						<span class="bubble personal"></span>
 						<div>Personal</div>
 					</label>
+					<label>
+						<input type="radio" name="category" id="category3" value="study" />
+						<span class="bubble study"></span>
+						<div>Study</div>
+					</label>
 				</div>
 
 				<input type="submit" value="Add todo" />
